# learning-ml

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LEARNING_PLAN.md  config.py  deepseek.md  encoder-decoder-arch.md  install-vllm-metal.sh  main.py  prek.toml  pyproject.toml  training_config.py
benchmarks/: benchmark_mha.py  visualize_attention.py
bert/: attention.py  block.py  embedding.py  head.py  mlm.py  model.py  train_mlm.py  train_nli.py
clip/: encoder-decoder.md  image_encoder.py  loss.py  model.py  projection.py  text_encoder.py  train.py  zero_shot.py
convolutions/: cnn-conv-funda.md  cnn.py  conv_from_scratch.py  train.py
deepseek/: block.py  generate.py  model.py  train.py
diffusion/: CONV2D.md  forward.py  funda.md  noise_schedule.py  sampler.py  time_embedding.py  train.py  u-net-funda.md  unet.py
distil/: __init__.py  generate.py  kl_div.py  loss.py  student.py  teacher.py  train.py
docs/: architecture_comparison.txt
latent_diffusion/: check_vae.py  conv_vae.py  sample.py  train.py  train_vae.py  unet.py  vae.py
layers/: __init__.py  attention.py  base.py  dropout.py  embedding.py  encoder_block.py  ffn.py  gelu.py  gqa.py  kv_cache.py  layernorm.py  linear.py  moe_router.py  multihead_attention.py  positional_encoding.py  relu.py  rmsnorm.py  rope.py  self_attention.py  sigmoid.py  softmax.py  swiglu.py  swish.py  tanh.py
llama/: __init__.py  block.py  generate.py  gqa.py  llama.py  model.py  rmsnorm.py  rope.py  swiglu.py  train.py
loss-functions/: base.py  bce.py  binary_hinge_loss.py  ce.py  mse.py  mse_backward_graph.md
(+48 files in other folders)
