[project]
name = "learning-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "mlx>=0.30.1",
    "numpy>=2.4.0",
    "safetensors>=0.7.0",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "pillow>=12.1.0",
]
